Revert "fix(user.css): made create playlist button visible"
This reverts commit c98df2175f08abbe3b860dcefc04968e6a0751a6.

--- a/src/user.css
+++ b/src/user.css
@@ -2968,6 +2968,10 @@ body:has(#lyrics-fullscreen-container) > #main > .Root {
   transition: background-color linear 200ms;
 }
 
+.main-yourLibraryX-button path {
+  display: none !important;
+}
+
 .main-yourLibraryX-collapseButton.main-yourLibraryX-collapseButtonIsCollapsed
   > .main-yourLibraryX-button {
   color: var(--spice-subtext);
